# trivial

./: .env  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  config.json
migrations/2023-02-12092347_users/: up.sql
migrations/2023-02-12092359_preguntas/: down.sql  up.sql
migrations/2023-02-18-163948_courses/: down.sql  up.sql
migrations/2023-02-18-170525_students_questions/: down.sql  up.sql
migrations/2023-02-18-173420_questions/: up.sql
src/: auth_handler.rs  config.rs  error.rs  image.rs  lib.rs  main.rs  models.rs  question.rs  register_handler.rs  schema.rs  util.rs
static/: 404.html  add_question.html  index.html  login.html  modify_question.html  register.html  statics.html  student_question.html
static/css/: add_question.css  index.css  sign-in.css  style.css
static/js/: add_question.js  color-modes.js  index.js  modify_question.js  register.js  sign-in.js  sign-off.js  statics.js  student_question.js
