[package]
name = "trivial_packager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.4"
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "2", features = ["mysql", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.8"
lazy_static = "1.4"
r2d2 = "0.8"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"
serde-big-array = "0.4.1"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
itertools = "0.10.5"
clap = "4.3.0"
